--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,18 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/upi-transaction.css">
+    <link integrity="" rel="stylesheet" href="./home/assets/vendor.css">
+    <link integrity="" rel="stylesheet" href="./home/assets/upi-transaction.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/upi-transaction.js"></script>
+    <script src="./home/assets/vendor.js"></script>
+    <script src="./home/assets/upi-transaction.js"></script>
 
     {{content-for "body-footer"}}
   </body>
